--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,7 @@
-spring.datasource.url=jdbc:sqlite:C:/Users/TUF Gaming/AppData/Roaming/DBeaverData/workspace6/.metadata/sample-database-sqlite-1/Chinook.db
-spring.datasource.driver-class-name=org.sqlite.JDBC
-
-spring.datasource.username=
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.SQLiteDialect
-spring.h2.console.enabled=true
+ spring.datasource.url=jdbc:postgresql://localhost:5432/OOP
+spring.datasource.username=postgres
+spring.datasource.password=200504
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
-logging.level.org.springframework.web=DEBUG
-logging.level.org.hibernate=ERROR
+spring.jpa.show-sql=true
+
